portfolio hamburger scrolls

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <td class="threebythreegrid" colspan="2" style="width:100%; vertical-align: top;">
       <div class="hamburger-menu">
           <input id="menu__toggle" type="checkbox" />
-          <label class="menu__btn" for="menu__toggle" style="left: 30%; top: 7%;">
+          <label class="menu__btn" for="menu__toggle" style="left: 30.5%; top: 7%;">
             <span></span>
           </label>
 
@@ -43,7 +43,7 @@
       </div>
 
       <p class="resume-prompt" style="margin-left: 7%; color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; padding-left: 5%; margin-top: -1%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page</span></br>For more about me, please  <a href="mailto:edwinfcau@gmail.com">
-        <span style="text-decoration: underline; color: blue;"> inquire</span></a>: edwinfcau@gmail.com</p>
+        <span style="text-decoration: underline; color: blue;"> inquire</span></a> &bull; edwinfcau@gmail.com</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; overflow: visible;">
@@ -56,16 +56,21 @@
 </tr>
 </table>
 
-
-
-
 <Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 1%;">
   <tr>
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
-      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+      <div class="popup" onclick="myFunction()">
+        <span class="popuptext" id="myPopup">A Simple Popup!</span>
         <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.95;">
-      </a>
+      </div>
   </td>
+
+
+
+
+
+
+
 
 <td class="threebythreegrid">
   <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -73,7 +78,6 @@
   </a>
 </td>
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
-    <div class="ipad displaynone">
           <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
             <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
           </a>
@@ -89,13 +93,11 @@
       </a>
   </td>
 
-<td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff;">
+<td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
   <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
-    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2); opacity: 0.5;">
-  </a>
+    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2); opacity: 0.5;"></a>
 </td>
 <td class="threebythreegrid" style="background:#77dd77;  border: 5px solid #ffffff;">
-    <div class="ipad displaynone">
           <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
             <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
           </a>
@@ -117,9 +119,29 @@
   </a>
 </td>
 <td class="threebythreegrid" style="background: #FFB6C1;  border: 5px solid #ffffff;">
-    <div class="ipad displaynone">
           <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
-            <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
+            <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
+          </a>
+    </td>
+  </tr>
+</table>
+
+<Table style="width:40vw; margin-left: auto; margin-right: auto; ">
+  <tr>
+    <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
+      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+        <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: .9;">
+      </a>
+  </td>
+
+<td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
+  <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+    <img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.65;">
+  </a>
+</td>
+<td class="threebythreegrid" style="background: #add8e6;  border: 5px solid #ffffff;">
+          <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+            <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
           </a>
     </td>
   </tr>
@@ -291,7 +313,7 @@
 	</div>
 </div>
 
--->
+
 
 <div>
 	<table align="left" height="50px" index="1000" class="portfolio-nav">
@@ -314,6 +336,8 @@
 	</tr>
 	</table>
 </div>
+
+-->
 
 <div class="container_one contactpage" style="background: red;
   background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
