zoomin fixes to css portofolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 
 
-<Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 25px;">
+<table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 25px;">
   <tr>
     <td class="threebythreegrid" colspan="2" style="width:100%; vertical-align: top;">
       <div class="hamburger-menu">
@@ -42,8 +42,7 @@
           </ul>
       </div>
 
-      <p class="resume-prompt" style="margin-left: 7%; color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; padding-left: 5%; margin-top: -1%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page</span></br>For more about me, please  <a href="mailto:edwinfcau@gmail.com">
-        <span style="text-decoration: underline; color: blue;"> inquire</span></a> &bull; edwinfcau@gmail.com</p>
+      <p class="resume-prompt" style="margin-left: 7%; color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; padding-left: 5%; margin-top: -1%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page</span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com"><span style="text-decoration: underline; color: blue;">inquire</span></a> &bull; edwinfcau@gmail.com</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; overflow: visible;">
@@ -56,26 +55,18 @@
 </tr>
 </table>
 
-<Table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 1%;">
+<table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 1%;">
   <tr>
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <div class="popup" onclick="myFunction()">
-        <span class="popuptext" id="myPopup">A Simple Popup!</span>
+        <span class="popuptext" id="myPopup">This is Text A</span>
         <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.95;">
       </div>
   </td>
 
 
-
-
-
-
-
-
 <td class="threebythreegrid">
-  <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
-  </a>
 </td>
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
           <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -85,7 +76,7 @@
   </tr>
 </table>
 
-<Table style="width:40vw; margin-left: auto; margin-right: auto;">
+<table style="width:40vw; margin-left: auto; margin-right: auto;">
   <tr>
     <td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -105,7 +96,7 @@
   </tr>
 </table>
 
-<Table style="width:40vw; margin-left: auto; margin-right: auto; ">
+<table style="width:40vw; margin-left: auto; margin-right: auto; ">
   <tr>
     <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -126,7 +117,7 @@
   </tr>
 </table>
 
-<Table style="width:40vw; margin-left: auto; margin-right: auto; ">
+<table style="width:40vw; margin-left: auto; margin-right: auto; ">
   <tr>
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -147,7 +138,7 @@
   </tr>
 </table>
 
-<Table style="width:40vw; margin-left: auto; margin-right: auto; ">
+<table style="width:40vw; margin-left: auto; margin-right: auto; ">
   <tr>
     <td class="threebythreegrid" style="background: #666666;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -159,7 +150,6 @@
 
 </td>
 <td class="threebythreegrid" >
-    <div class="ipad displaynone">
 
     </td>
   </tr>
