--- a/index.html
+++ b/index.html
@@ -29,7 +29,23 @@
 
   <body>
 
+	  
+	  <div class="hamburger-menu">
+          <input id="menu__toggle" type="checkbox" />
+          <label class="menu__btn" for="menu__toggle">
+            <span></span>
+          </label>
+
+          <ul class="menu__box">
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Portfolio</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon">Contact me</a></li>
+          </ul>
+      </div>
+	  
   <p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
+	  
+
 
     <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
@@ -56,19 +72,6 @@
         </div>
       </div>
 
-      <div class="hamburger-menu">
-          <input id="menu__toggle" type="checkbox" />
-          <label class="menu__btn" for="menu__toggle">
-            <span></span>
-          </label>
-
-          <ul class="menu__box">
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Portfolio</a></li>
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon">Contact me</a></li>
-          </ul>
-      </div>
-
 
 	  <div style="background: red;
   background: -webkit-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Safari 5.1 to 6.0 */
@@ -80,7 +83,7 @@
     </div>
 
 <center>
-  <div style="transform: scale(2.5); margin-top: 5%;"> <div class='trapezoid'></div></div>
+  <div style="transform: scale(2.5); margin-top: 5%;"> <div class="trapezoid"></div></div>
 
 </center>
 
@@ -164,7 +167,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 <!-- In a Nutsell -->
 
 
-<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, white 5px, transparent 5px) 0 5px;">
+<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, white 5px, transparent 5px) 0 5px; width: 50%; margin: auto;">
 <!--  <img src="images/plant-2.png" class="img_absolute img_plant" alt="plant"> -->
 <!--  <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop"> -->
 
