--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
     <link href="stylesheet/contact_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
   	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/threegridpopup.css" type="text/css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -26,12 +27,12 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 
 
-<table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 25px;">
+<table class="threecoloumntables" style="margin-top: 25px;">
   <tr>
-    <td class="threebythreegrid" colspan="2" style="width:100%; vertical-align: top;">
+    <td class="threebythreegrid" style="position: relative; width:100px; vertical-align: top; align: left; overflow: visible;">
       <div class="hamburger-menu">
           <input id="menu__toggle" type="checkbox" />
-          <label class="menu__btn" for="menu__toggle" style="left: 30.5%; top: 7%;">
+          <label class="menu__btn" for="menu__toggle" style="top: 30%;">
             <span></span>
           </label>
 
@@ -41,21 +42,24 @@
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
           </ul>
       </div>
-
-      <p class="resume-prompt" style="margin-left: 7%; color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; padding-left: 5%; margin-top: -1%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page</span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com"><span style="text-decoration: underline; color: blue;">inquire</span></a> &bull; edwinfcau@gmail.com</p>
+    </td>
+    <td style="width: 500px; vertical-align: top; align">
+      <p class="resume-prompt" style="margin-left: 1px; color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; padding-left: 2%; margin-top: 3%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page
+      </span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
+        <span style="text-decoration: underline; color: blue;">inquire</span></a> &bull; edwinfcau@gmail.com</p>
     </td>
 
-    <td class="threebythreegrid" style="width: 125px; overflow: visible;">
-      <a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html" style="padding:0px; border: none;">
+    <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
+      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;">
       <center>
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="float: right; margin-left: 0px; border-radius: 100px; width: 100px; height: auto; margin-bottom: 15%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 100px; width: 100px; height: auto; margin-bottom: 15%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
       <p style="color: #666666; font-family: 'lato', serif; font-size: 12pt; font-weight: bold; padding-left:3%;">Edwin</p>
     </center></a>
   </td>
 </tr>
 </table>
 
-<table style="width:40vw; margin-left: auto; margin-right: auto; margin-top: 1%;">
+<table class="threecoloumntables" style="margin-top: 1%;">
   <tr>
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <div class="popup" onclick="myFunction()">
@@ -66,7 +70,10 @@
 
 
 <td class="threebythreegrid">
+  <div class="popuptwo" onclick="myFunctiontwo()">
+    <span class="popuptexttwo" id="myPopuptwo">This is Text B</span>
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
+  </div>
 </td>
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
           <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -76,7 +83,7 @@
   </tr>
 </table>
 
-<table style="width:40vw; margin-left: auto; margin-right: auto;">
+<table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -96,7 +103,7 @@
   </tr>
 </table>
 
-<table style="width:40vw; margin-left: auto; margin-right: auto; ">
+<table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -117,7 +124,7 @@
   </tr>
 </table>
 
-<table style="width:40vw; margin-left: auto; margin-right: auto; ">
+<table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
@@ -138,7 +145,7 @@
   </tr>
 </table>
 
-<table style="width:40vw; margin-left: auto; margin-right: auto; ">
+<table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background: #666666;  border: 5px solid #ffffff;">
       <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
