--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body>
 
-	  
+
 	  <div class="hamburger-menu">
           <input id="menu__toggle" type="checkbox" />
           <label class="menu__btn" for="menu__toggle">
@@ -42,9 +42,9 @@
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon">Contact me</a></li>
           </ul>
       </div>
-	  
+
   <p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
-	  
+
 
 
     <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
@@ -83,7 +83,9 @@
     </div>
 
 <center>
-  <div style="transform: scale(2.5); margin-top: 5%;"> <div class="trapezoid"></div></div>
+  <div style="transform: scale(2.5); margin-top: 5%; width:30%;"> 
+    <div class="trapezoid"></div>
+  </div>
 
 </center>
 
