--- a/portfolio.html
+++ b/portfolio.html
@@ -63,22 +63,31 @@
   <tr>
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
       <div class="popup" onclick="myFunction()">
-        <span class="popuptext" id="myPopup">This is Text A</span>
+        <span class="popuptext" id="myPopup">
+          <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images_pop">
+          <p class="textforpopup">2020 - present | Visual &amp; UX/UI design for BLG Beyond - alternative legal services</p>
+		  </span>
         <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.95;">
       </div>
   </td>
 
-
 <td class="threebythreegrid">
   <div class="popuptwo" onclick="myFunctiontwo()">
-    <span class="popuptexttwo" id="myPopuptwo">This is Text B</span>
+    <span class="popuptexttwo" id="myPopuptwo">
+      <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop">
+      <p class="textforpopup">2022 | Visual &amp; UX/UI design for BLG Merchandise Store - client retail portal</p></span>
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
   </div>
 </td>
+
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
-          <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
-            <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
-          </a>
+  <div class="popupthree" onclick="myFunctionthree()">
+    <span class="popuptextthree" id="myPopupthree">
+      <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2021 | Product design for BLG Google Campaign; includes UX UI and web form creation</p>
+      </span>
+        <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
+      </div>
     </td>
   </tr>
 </table>
@@ -86,19 +95,33 @@
 <table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background:grey;  border: 5px solid #ffffff;">
-      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+      <div class="popupfour" onclick="myFunctionfour()">
+        <span class="popuptextfour" id="myPopupfour">
+          <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
+            <p class="textforpopup">2017 - 2020 | Digital designer and worked on the launch of blakes.com</p>
+          </span>
         <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: 0.3;">
-      </a>
+      </div>
   </td>
 
 <td class="threebythreegrid" style="background:#006994;  border: 5px solid #ffffff; padding-left:10%;">
-  <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
-    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2); opacity: 0.5;"></a>
+  <div class="popupfive" onclick="myFunctionfive()">
+    <span class="popuptextfive" id="myPopupfive">
+      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2017 - 2020 | Digital designer at Blakes Cassels and Graydon LLP - HTML &amp; CSS</p>
+      </span>
+    <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2); opacity: 0.5;">
+  </div>
 </td>
+
 <td class="threebythreegrid" style="background:#77dd77;  border: 5px solid #ffffff;">
-          <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
-            <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
-          </a>
+  <div class="popupsix" onclick="myFunctionsix()">
+    <span class="popuptextsix" id="myPopupsix">
+      <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2017 - 2020 | Digital designer at Blakes Cassels and Graydon LLP - HTML &amp; CSS</p>
+      </span>
+        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
+        </div>
     </td>
   </tr>
 </table>
@@ -106,20 +129,32 @@
 <table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
-      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+      <div class="popup7" onclick="myFunction7()">
+        <span class="popuptext7" id="myPopup7">
+          <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
+            <p class="textforpopup">2017 - 2020 | Digital designer at Blakes Cassels and Graydon LLP - HTML &amp; CSS</p>
+          </span>
         <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
-      </a>
+      </div>
   </td>
 
 <td class="threebythreegrid" style="background: #1b0000;  border: 5px solid #ffffff;">
-  <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+  <div class="popup8" onclick="myFunction8()">
+    <span class="popuptext8" id="myPopup8">
+      <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2016 | Design Manager for Thinkway Toys Inc - Consumer Product Design</p>
+      </span>
     <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.6;">
-  </a>
+  </div>
 </td>
 <td class="threebythreegrid" style="background: #FFB6C1;  border: 5px solid #ffffff;">
-          <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
-            <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
-          </a>
+  <div class="popup9" onclick="myFunction9()">
+    <span class="popuptext9" id="myPopup9">
+      <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2016 | Consumer Product Designer for Disney Canada - Uniqlo T-shirt design</p>
+      </span>
+      <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
+    </div>
     </td>
   </tr>
 </table>
@@ -127,20 +162,33 @@
 <table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
-      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
-        <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: .9;">
-      </a>
+      <div class="popup10" onclick="myFunction10()">
+        <span class="popuptext10" id="myPopup10">
+          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
+            <p class="textforpopup">2013 - 2016 | Consumer Product Designer for Disney Canada. <br>Formerly Online Product Approval (OPA) Associate </p>
+          </span>
+          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: .9;">
+      </div>
   </td>
 
 <td class="threebythreegrid" style="background: #e1c699;  border: 5px solid #ffffff;">
-  <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+  <div class="popup11" onclick="myFunction11()">
+    <span class="popuptext11" id="myPopup11">
+      <img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2012 - 2013 | Consumer Products for Dolce &amp; Gabbana <br>Intern in Milan office</p>
+      </span>
     <img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.65;">
-  </a>
+  </div>
 </td>
+
 <td class="threebythreegrid" style="background: #add8e6;  border: 5px solid #ffffff;">
-          <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+  <div class="popup12" onclick="myFunction12()">
+    <span class="popuptext12" id="myPopup12">
+      <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images_pop">
+        <p class="textforpopup">2010 | Desktop Publisher for National Bank Financial - department of Institutional Equities</p>
+      </span>
             <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
-          </a>
+          </div>
     </td>
   </tr>
 </table>
@@ -148,9 +196,13 @@
 <table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background: #666666;  border: 5px solid #ffffff;">
-      <a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: none; color: black;">
+      <div class="popup13" onclick="myFunction13()">
+        <span class="popuptext13" id="myPopup13">
+          <img alt="Carousel Bootstrap Third" src="images/mred.jpg" class="portfolio_images_pop">
+            <p class="textforpopup">2010 | Consumer Product Designer and Fashion Designer for Mred Clothing Label</p>
+          </span>
         <img alt="Carousel Bootstrap Third" src="images/mred.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
-      </a>
+      </div>
   </td>
 
 <td class="threebythreegrid" >
