--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <title>Edwin Au</title>
 
   </head>
-<body>
+<body style="overflow-x: hidden;">
 <!-- <div class="carolcarolcon Desktop"> -->
 
 
@@ -129,8 +129,8 @@
 <table class="threecoloumntables">
   <tr>
     <td class="threebythreegrid" style="background: #ff7518;  border: 5px solid #ffffff;">
-      <div class="popup7" onclick="myFunction7()">
-        <span class="popuptext7" id="myPopup7">
+      <div class="popupseven" onclick="myFunctionseven()">
+        <span class="popuptextseven" id="myPopupseven">
           <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
             <p class="textforpopup">2017 - 2020 | Digital designer at Blakes Cassels and Graydon LLP - HTML &amp; CSS</p>
           </span>
@@ -388,16 +388,16 @@
 
 -->
 
-<div class="container_one contactpage" style="background: red;
+<div class="container_one contactpage" style="overflow: hidden; background: red;
   background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
   background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
-  width: 100vw; height: 22vh; margin-top: 2%; z-index:-2000;">
+  width: 100vw; height: 22vh; margin-top: 10%; z-index:-2000;">
  <!--<img src="images/city_contact.png" class="img_contact" id="contactme" alt="city"> -->
 
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
-<div class="container_two contact">
+<div class="container_two contact" style="overflow: hidden;">
       <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email ">edwinfcau@gmail.com</a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
