desktop nearly done, before starting phone

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </ul>
       </div>
 
-  <p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
+  <p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 22pt; font-weight: lighter; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
 
 
 
@@ -83,7 +83,7 @@
     </div>
 
 <center>
-  <div style="transform: scale(2.5); margin-top: 5%; width:30%;"> 
+  <div style="transform: scale(2.5); margin-top: 5%; width:30%;">
     <div class="trapezoid"></div>
   </div>
 
