--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
       <div class="popupfour" onclick="myFunctionfour()">
         <span class="popuptextfour" id="myPopupfour">
           <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
-            <p class="textforpopup">2017 - 2020 | Digital designer and worked on the launch of blakes.com</p>
+            <p class="textforpopup">2017 - 2020 | Digital designer - worked on the launch of blakes.com</p>
           </span>
         <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: 0.3;">
       </div>
@@ -108,7 +108,7 @@
   <div class="popupfive" onclick="myFunctionfive()">
     <span class="popuptextfive" id="myPopupfive">
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2017 - 2020 | Digital designer at Blakes Cassels and Graydon LLP - HTML &amp; CSS</p>
+        <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
       </span>
     <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2); opacity: 0.5;">
   </div>
@@ -118,7 +118,7 @@
   <div class="popupsix" onclick="myFunctionsix()">
     <span class="popuptextsix" id="myPopupsix">
       <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2017 - 2020 | Digital designer at Blakes Cassels and Graydon LLP - HTML &amp; CSS</p>
+        <p class="textforpopup">2017 - 2020 | Digital designer at Blake, Cassels and Graydon LLP (Blakes LLP) - HTML &amp; CSS</p>
       </span>
         <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.5;">
         </div>
@@ -132,7 +132,7 @@
       <div class="popupseven" onclick="myFunctionseven()">
         <span class="popuptextseven" id="myPopupseven">
           <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop">
-            <p class="textforpopup">2017 - 2020 | Digital designer at Blakes Cassels and Graydon LLP - HTML &amp; CSS</p>
+            <p class="textforpopup">2017 - 2020 | Digital designer at BBlake, Cassels and Graydon LLP (Blakes LLP)- HTML &amp; CSS</p>
           </span>
         <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
       </div>
@@ -151,7 +151,8 @@
   <div class="popup9" onclick="myFunction9()">
     <span class="popuptext9" id="myPopup9">
       <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2016 | Consumer Product Designer for Disney Canada - Uniqlo T-shirt design</p>
+        <p class="textforpopup">2013 - 2016 | Consumer Product Approval for Disney Canada<br>Formerly Online Product Approval (OPA) Associate, Design | See previous slide - while <br>working at Disney Canada, my design got chosen for a graphic T-shirt to be sold at Uniqlo.
+        </p>
       </span>
       <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
     </div>
@@ -165,7 +166,7 @@
       <div class="popup10" onclick="myFunction10()">
         <span class="popuptext10" id="myPopup10">
           <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
-            <p class="textforpopup">2013 - 2016 | Consumer Product Designer for Disney Canada. <br>Formerly Online Product Approval (OPA) Associate </p>
+            <p class="textforpopup">2013 - 2016 | Consumer Product Approval for Disney Canada<br>Formerly Online Product Approval (OPA) Associate, Design</p>
           </span>
           <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: .9;">
       </div>
@@ -185,7 +186,7 @@
   <div class="popup12" onclick="myFunction12()">
     <span class="popuptext12" id="myPopup12">
       <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2010 | Desktop Publisher for National Bank Financial - department of Institutional Equities</p>
+        <p class="textforpopup">2010 | Desktop Publisher for National Bank Financial - Institutional Equities</p>
       </span>
             <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
           </div>
