phone css part 1

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
           </ul>
       </div>
 
-  <p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 22pt; font-weight: lighter; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
+  <p class="resume-prompt ipad displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 22pt; font-weight: lighter; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 5%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
 
+  <p class="resume-prompt imac displaynone" style="color: gray; font-family: 'Lato', serif; font-size: 16pt; font-weight: lighter; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 30%; margin-bottom:1%; text-align: center;">Welcome to my page</p>
 
 
     <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
@@ -169,7 +170,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 <!-- In a Nutsell -->
 
 
-<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, white 5px, transparent 5px) 0 5px; width: 50%; margin: auto;">
+<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, white 5px, transparent 5px) 0 5px;">
 <!--  <img src="images/plant-2.png" class="img_absolute img_plant" alt="plant"> -->
 <!--  <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop"> -->
 
@@ -180,10 +181,10 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
              <p class="i_believe">I'm passionate at creating dynamic digital products by extensively researching client/market needs and using optimized wireframes, strategical call-to-action's and industry best practices that put user experience and design interface at the forefront.  <br><br>Whether at work or not,<br>I take my pour over coffee pretty&nbsp;seriously ☕<br><br>When not at work, I enjoy spending quality time with my family, friends and partner.  I workout at the gym frequently and am always down for a good Netflix binge.</p> -->
            <!-- </div>  -->
 <center>
-            <div id="labtopresumewidth">
+    <div id="labtopresumewidth">
 			<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 14pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do</p>
 				<div id="resume_movement" style="margin-left:auto; margin-right: auto;"><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf" ></a></div>
-			  </div>
+        </div>
       </center>
         </div>
       </div>
@@ -193,12 +194,19 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 
  <!-- contact page -->
 
-<div class="container_one contactpage" id="concon" style="background: red;
+<div class="container_one contactpage ipad displaynone" id="concon" style="background: red;
   background: -webkit-linear-gradient(white, white, white, white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(white, white, white, white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(white, white, white, white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
   background: linear-gradient(white, white, white, white, #33273d, #003c5f); /* Standard syntax */
   ">
+
+  <div class="container_one contactpage imac displaynone" id="concon" style="background: red;
+    background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
+    ">
 	  <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
 
   <img src="images/city_contact.png" class="img_contact" alt="city">
