--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 
 
-<table class="threecoloumntables" style="margin-top: 25px;">
+<table class="threecoloumntables ipad displaynone" style="margin-top: 25px;">
   <tr>
     <td class="threebythreegrid" style="position: relative; width:100px; vertical-align: top; align: left; overflow: visible;">
       <div class="hamburger-menu">
@@ -58,6 +58,40 @@
   </td>
 </tr>
 </table>
+
+<table class="threecoloumntables imac displaynone" style="margin-top: 25px;">
+  <tr>
+    <td class="threebythreegrid" style="position: relative; width:200px; vertical-align: top; align: left; overflow: visible;">
+      <div class="hamburger-menu">
+          <input id="menu__toggle" type="checkbox" />
+          <label class="menu__btn" for="menu__toggle" style="top: 20%; margin-left: 1vw;">
+            <span></span>
+          </label>
+
+          <ul class="menu__box">
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon"> Contact me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
+          </ul>
+      </div>
+    </td>
+    <td style="width: 500px; vertical-align: top; align: left;">
+      <p class="resume-prompt" style="margin-left: 1vw; color: gray; font-family: 'Lato', serif; font-size: 11.5pt; letter-spacing: .1em; line-height: 1.8; opacity: 1; padding-left: 2%; margin-top: 3%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to <br>my portfolio page
+      </span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
+        <span style="text-decoration: underline; color: blue;">inquire</span></a> within</p>
+    </td>
+
+    <td class="threebythreegrid" style="width: 200px; height: 125px; overflow: visible;">
+      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;">
+      <center>
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 100px; width: 100px; height: auto; margin-bottom: 10%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
+      <p style="color: #a6a6a6; font-family: 'lato', serif; font-size: 12pt; font-weight: bold; padding-left:3%;">Edwin</p>
+    </center></a>
+  </td>
+</tr>
+</table>
+
+
 
 <table class="threecoloumntables" style="margin-top: 1%;">
   <tr>
@@ -142,7 +176,7 @@
   <div class="popup8" onclick="myFunction8()">
     <span class="popuptext8" id="myPopup8">
       <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2016 | Design Manager for Thinkway Toys Inc - Consumer Product Design</p>
+        <p class="textforpopup">2016 | Design Manager for Thinkway Toys - Consumer Products & Packaging Design</p>
       </span>
     <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.6;">
   </div>
