more phone changes to make iphone look more iphone

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
     <td class="threebythreegrid" style="width: 200px; height: 125px; overflow: visible;">
       <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;">
       <center>
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 100px; width: 100px; height: auto; margin-bottom: 10%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; -webkit-border-radius: 500px; width: 100px; height: auto; margin-bottom: 10%; outline: 2px solid #dcdcdc; outline-offset: 6px; -webkit-outline: 2px solid #dcdcdc; -webkit-outline-offset: 6px;">
       <p style="color: #a6a6a6; font-family: 'lato', serif; font-size: 12pt; font-weight: bold; padding-left:3%;">Edwin</p>
     </center></a>
   </td>
@@ -176,7 +176,7 @@
   <div class="popup8" onclick="myFunction8()">
     <span class="popuptext8" id="myPopup8">
       <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
-        <p class="textforpopup">2016 | Design Manager for Thinkway Toys - Consumer Products & Packaging Design</p>
+        <p class="textforpopup">2016 | Design Manager for Thinkway Toys - Consumer Products &amp; Packaging Design Manager</p>
       </span>
     <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.6;">
   </div>
