fixing phone profile pic radius

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
           </ul>
       </div>
     </td>
-    <td style="width: 500px; vertical-align: top; align">
+    <td style="width: 700px; vertical-align: top; align">
       <p class="resume-prompt" style="margin-left: 1px; color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; padding-left: 2%; margin-top: 3%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page
       </span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
         <span style="text-decoration: underline; color: blue;">inquire</span></a> &bull; edwinfcau@gmail.com</p>
@@ -52,7 +52,7 @@
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
       <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;">
       <center>
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 100px; width: 100px; height: auto; margin-bottom: 15%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 100px; height: auto; margin-bottom: 15%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
       <p style="color: #666666; font-family: 'lato', serif; font-size: 12pt; font-weight: bold; padding-left:3%;">Edwin</p>
     </center></a>
   </td>
@@ -82,9 +82,9 @@
     </td>
 
     <td class="threebythreegrid" style="width: 200px; height: 125px; overflow: visible;">
-      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;">
+      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto;">
       <center>
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; -webkit-border-radius: 500px; width: 100px; height: auto; margin-bottom: 10%; outline: 2px solid #dcdcdc; outline-offset: 6px; -webkit-outline: 2px solid #dcdcdc; -webkit-outline-offset: 6px;">
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; -webkit-border-radius: 500px; width: 100px; height: auto; margin-bottom: 10%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
       <p style="color: #a6a6a6; font-family: 'lato', serif; font-size: 12pt; font-weight: bold; padding-left:3%;">Edwin</p>
     </center></a>
   </td>
