iphone hamburger left

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 
 
-<table class="threecoloumntables ipad displaynone" style="margin-top: 25px;">
+<table class="threecoloumntables" style="margin-top: 25px;">
   <tr>
     <td class="threebythreegrid" style="position: relative; width:100px; vertical-align: top; align: left; overflow: visible;">
       <div class="hamburger-menu">
@@ -58,39 +58,6 @@
   </td>
 </tr>
 </table>
-
-<table class="threecoloumntables imac displaynone" style="margin-top: 25px;">
-  <tr>
-    <td class="threebythreegrid" style="position: relative; width:200px; vertical-align: top; align: left; overflow: visible;">
-      <div class="hamburger-menu">
-          <input id="menu__toggle" type="checkbox" />
-          <label class="menu__btn" for="menu__toggle" style="top: 20%; margin-left: 1vw;">
-            <span></span>
-          </label>
-
-          <ul class="menu__box">
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#concon"> Contact me</a></li>
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
-          </ul>
-      </div>
-    </td>
-    <td style="width: 500px; vertical-align: top; align: left;">
-      <p class="resume-prompt" style="margin-left: 1vw; color: gray; font-family: 'Lato', serif; font-size: 11.5pt; letter-spacing: .1em; line-height: 1.8; opacity: 1; padding-left: 2%; margin-top: 3%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to <br>my portfolio page
-      </span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
-        <span style="text-decoration: underline; color: blue;">inquire</span></a> within</p>
-    </td>
-
-    <td class="threebythreegrid" style="width: 200px; height: 125px; overflow: visible;">
-      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto;">
-      <center>
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; -webkit-border-radius: 500px; width: 100px; height: auto; margin-bottom: 10%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
-      <p style="color: #a6a6a6; font-family: 'lato', serif; font-size: 12pt; font-weight: bold; padding-left:3%;">Edwin</p>
-    </center></a>
-  </td>
-</tr>
-</table>
-
 
 
 <table class="threecoloumntables" style="margin-top: 1%;">
@@ -423,13 +390,8 @@
 
 -->
 
-<div class="container_one contactpage" style="overflow: hidden; background: red;
-  background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
-  width: 100vw; height: 22vh; margin-top: 10%; z-index:-2000;">
- <!--<img src="images/city_contact.png" class="img_contact" id="contactme" alt="city"> -->
+<div class="container_one contactpage">
+ <!--<img src="images/city_contact.png" class="imgs_contact" id="contactme" alt="city"> -->
 
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
 <div class="container_two contact" style="overflow: hidden;">
@@ -451,7 +413,7 @@
 </div>
 
 
-<div class="totop" id="myP"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>
+<!--<div class="totop" id="myP"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>-->
 
 
 
