--- a/index.html
+++ b/index.html
@@ -169,43 +169,31 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 <!-- In a Nutsell -->
 
 
-<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, white 5px, transparent 5px) 0 5px;">
+	<div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, white 5px, transparent 5px) 0 5px;">
 <!--  <img src="images/plant-2.png" class="img_absolute img_plant" alt="plant"> -->
 <!--  <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop"> -->
-
-	<div class="container_nut">
-		<div class="container-fluid nut">
+		<div class="container_nut">
+			<div class="container-fluid nut">
             <!--<div class="col-md-10"> -->
               <!--<p class="hello">Who I am <br> &amp; what I do...</p><hr style="width: 85%;" class="ipad displaynone">
              <p class="i_believe">I'm passionate at creating dynamic digital products by extensively researching client/market needs and using optimized wireframes, strategical call-to-action's and industry best practices that put user experience and design interface at the forefront.  <br><br>Whether at work or not,<br>I take my pour over coffee pretty&nbsp;seriously ☕<br><br>When not at work, I enjoy spending quality time with my family, friends and partner.  I workout at the gym frequently and am always down for a good Netflix binge.</p> -->
            <!-- </div>  -->
-<center>
-    <div id="labtopresumewidth">
-			<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 14pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do</p>
-				<div id="resume_movement" style="margin-left:auto; margin-right: auto;"><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf" ></a></div>
-        </div>
-      </center>
-        </div>
-      </div>
+				<center>
+    				<div id="labtopresumewidth">
+						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 14pt; font-weight: bold; letter-spacing: .1em; line-height: 2; opacity: 1; margin: auto; margin-top: 0; margin-bottom:2%; text-align: center;">Who I am and what I do</p>
+						<div id="resume_movement" style="margin-left:auto; margin-right: auto;"><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf" ></a>
+						</div>
+					</div>
+				</center>
+        	</div>
+      	</div>
     </div>
 
 
 
  <!-- contact page -->
 
-<div class="container_one contactpage ipad displaynone" id="concon" style="background: red;
-  background: -webkit-linear-gradient(white, white, white, white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, white, white, white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, white, white, white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, white, white, white, #33273d, #003c5f); /* Standard syntax */
-  ">
-
-  <div class="container_one contactpage imac displaynone" id="concon" style="background: red;
-    background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
-    ">
+<div class="container_one contactpage" id="concon">
 	  <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
 
   <img src="images/city_contact.png" class="img_contact" alt="city">
@@ -223,6 +211,33 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
       </div>
     </div>
 </div>
+
+
+
+<!--<div class="container_one contactpage imac displaynone" id="concontwo" style="background: red;
+  background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
+  ">
+  <img src="images/city_contact.png" class="img_contact" alt="city">
+    <div class="container_two contact">
+      <div class="container_contacts">
+        <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email">edwinfcau@gmail.com</a></h4>
+      <br class="imac displaynone"><br class="imac displaynone">
+      <br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
+      <br class="imac displaynone"><br class="imac displaynone">-->
+       <!-- <h4 class="facebook" title="Click to view Facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
+    <!--  <br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791" id="contactmetwo"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
+      <br class="imac displaynone"><br class="imac displaynone">
+      </div>
+    </div>
+</div>-->
+
+
+
 
 <!-- <div class="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i>top</a></div> -->
 
