fixed phone portfolio hamburger and profile header

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 
 <table class="threecoloumntables" style="margin-top: 25px;">
   <tr>
-    <td class="threebythreegrid" style="position: relative; width:100px; vertical-align: top; align: left; overflow: visible;">
+    <td class="threebythreegrid hamburger" style="position: relative; vertical-align: top; align: left; overflow: visible;">
       <div class="hamburger-menu">
           <input id="menu__toggle" type="checkbox" />
           <label class="menu__btn" for="menu__toggle" style="top: 30%;">
@@ -44,15 +44,14 @@
       </div>
     </td>
     <td style="width: 700px; vertical-align: top; align">
-      <p class="resume-prompt" style="margin-left: 1px; color: gray; font-family: 'Lato', serif; font-size: 12pt; letter-spacing: .1em; line-height: 2; opacity: 1; padding-left: 2%; margin-top: 3%; margin-bottom:2%; text-align: left;"><span style="font-weight: bold; color: black;">Welcome to my portfolio page
-      </span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
-        <span style="text-decoration: underline; color: blue;">inquire</span></a> &bull; edwinfcau@gmail.com</p>
+      <p class="resume-prompt"><span style="color: #666666; font-size: 13pt;">Welcome to my portfolio page</span><br>For more about me, please <a href="mailto:edwinfcau@gmail.com">
+        <span style="text-decoration: underline; color: blue;">inquire</span></a> within</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
       <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;">
       <center>
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 100px; height: auto; margin-bottom: 15%; outline: 2px solid #dcdcdc; outline-offset: 6px;">
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 100px; height: auto; margin-bottom: 15%;">
       <p style="color: #666666; font-family: 'lato', serif; font-size: 12pt; font-weight: bold; padding-left:3%;">Edwin</p>
     </center></a>
   </td>
